--- a/Users/templates/Users/main.html
+++ b/Users/templates/Users/main.html
@@ -54,12 +54,12 @@
             <ul>
                 <li class="sidebar__item">
                     <a href="#" class="item--profile sidebar__item-link">
-                        <img src="{%static '/IMAGES/Guts.jpg'%}" alt="profile-img">
-                        <span class="profile-option">Guts</span>
+                        <img src="../../../media/{{user.profile.image}}" alt="profile-img">
+                        <span class="profile-option">{{user.username}}</span>
                     </a>
                 </li>
                 <li class="sidebar__item">
-                    <a href="#" class="sidebar__item-link">
+                    <a href="{% url 'logout' %}" class="sidebar__item-link">
                         <span class="material-symbols-outlined">Logout</span>
                         <p>Logout</p>
                     </a>   
