--- a/Users/static/CSS/mainStyles.css
+++ b/Users/static/CSS/mainStyles.css
@@ -31,6 +31,7 @@ body {
     --sidebar-color: color-mix(in srgb, #000 25%, #fff);
     --dark-color: #222;
     --fb-color: #003366;
+    --wood: #8B5E3C;
     background-color: var(--bg-color);
     font-family: Montserrat;
     display: flex;
