--- a/Users/templates/Users/signUp.html
+++ b/Users/templates/Users/signUp.html
@@ -1,5 +1,6 @@
 <form method="POST" enctype="multipart/form-data" class="signUp-form">
+    <h2>Crear cuenta</h2>
     {% csrf_token %}
     {{ form }}
     <input type="submit" name="signup" value="Registrarse">
-</form>
+</form> 
