--- a/Users/templates/Users/logIn.html
+++ b/Users/templates/Users/logIn.html
@@ -1,6 +1,8 @@
 <form method="POST" class="logIn-form">
+    <h2>Iniciar Sesión</h2>
     {{error}}
     {% csrf_token %}
     {{ form_login }}
     <input type="submit"  value="Iniciar Sesión">
+    <a href="#">Olvidé la contraseña</a>
 </form>
