--- a/Users/templates/Users/start.html
+++ b/Users/templates/Users/start.html
@@ -7,7 +7,7 @@
     <title>Welcome</title>
 </head>
 <body>
-    <div class="container">
+    <div class="container {{class}}">
         <div class="sign-up">
             {% include 'Users/signUp.html' %}
         </div>
