--- a/Users/templates/Users/start.html
+++ b/Users/templates/Users/start.html
@@ -19,12 +19,12 @@
                 <div class="toogle-panel toogle-left">
                     <h3>¡Bienvenido!</h3>
                     <p>Si ya tienes una cuenta</p>
-                    <button class="hidden" id="login">Inicia Sesión</button>
+                    <button class="hidden" id="login">Iniciar Sesión</button>
                 </div>
                 <div class="toogle-panel toogle-right">
                     <h3>¡Hola de nuevo!</h3>
                     <p>Si no tienes una cuenta</p>
-                    <button class="hidden" id="register">Registrate</button>
+                    <button class="hidden" id="register">Registrarse</button>
                 </div>
             </div>
         </div>
