--- a/Users/static/CSS/startUpStyles.css
+++ b/Users/static/CSS/startUpStyles.css
@@ -25,8 +25,8 @@ body {
     box-shadow: 0 5px 15px rgb(0, 0, 0, 0.35);
     position: relative;
     overflow: hidden;
-    width: clamp(50%, 768px, 100%);
-    height: 480px;
+    width: clamp(50%, 820px, 100%);
+    height: 600px;
 }
 
 .container p {
@@ -34,10 +34,6 @@ body {
     line-height: 20px;
     letter-spacing: 0.3px;
     margin: 20px 0;
-}
-
-.container span {
-    font-size: 12px;
 }
 
 .container a {
@@ -58,6 +54,16 @@ body {
     text-transform: uppercase;
     margin-top: 10px;
     cursor: pointer;
+}
+
+form > input[type="submit"] {
+    transition: box-shadow .3s;
+    outline: none;
+}
+
+form > input[type="submit"]:hover {
+    box-shadow: 7px 7px 0px rgb(100, 166, 231),
+                -7px -7px 0px #335a94;
 }
 
 .container button.hidden {
@@ -100,6 +106,10 @@ form > div {
     outline: none;
 }
 
+div input:focus {
+    outline: var(--wood) 1px solid;
+}
+
 .sign-up, .log-in, .toogle-container {
     position: absolute;
     top: 0;
@@ -108,19 +118,58 @@ form > div {
     transition: all .5s ease-in-out;
 }
 
+form > h2 {
+    font-size: 2.2rem;
+    margin-bottom: 20px;
+
+}
+
+.no-margin {
+    margin: 0;
+}
+
 .log-in {
     left: 0;
     z-index: 2;
+}
+
+.log-in .error {
+    text-align: center;
+    color: #e24;
+    font-size: 1rem;
+}
+
+.log-in a {
+    font-size: .9rem;
+}
+
+.log-in a:hover {
+    text-decoration: underline;
 }
 
 .container.active .log-in{
     transform: translateX(100%);
 }
 
+.log-in form, .sign-up form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
 .sign-up {
     left: 0;
     z-index: 1;
     opacity: 0;
+}
+
+.errorlist {
+    list-style: none;
+}
+
+.errorlist li {
+    color: #e24;
+    font-size: .9rem;
 }
 
 .container.active .sign-up{
@@ -174,6 +223,10 @@ form > div {
     transition: all .5s ease-in-out;
 }
 
+.toogle-panel h3 {
+    font-size: 1.6rem;
+}
+
 .toogle-left {
     transform: translateX(-200%);
 }
@@ -191,6 +244,10 @@ form > div {
     transform: translateX(200%);
 }
 
+.button-container{
+    display: none;
+}
+
 @keyframes move {
     0%, 49.99% {
         opacity: 0;
@@ -199,5 +256,51 @@ form > div {
     50%, 100% {
         opacity: 1;
         z-index: 5;
+    }
+}
+
+@media (max-width: 768px) {
+    .container {
+        height: 710px;
+    }
+    .toogle-container {
+        display: none;
+    }
+
+    .log-in, .sign-up {
+        width: 100%;
+    }
+
+    .button-container {
+        display: flex;
+        flex-direction: row;
+        font-size: 1rem;
+        place-content: center;
+        margin-top: 10px;
+    }
+
+    .button-container > .signUp-button, .button-container > .logIn-button {
+        border: none;
+        margin: 0;
+        outline: none;
+        padding: 0;
+        background-color: transparent;
+        font-size: inherit;
+        text-transform: none;
+        font-family: inherit;
+        color: #335a94;
+        margin-left: 2px;
+    }
+
+    .sign-up {
+        top: -100%;
+    }
+
+    .container.active .sign-up {
+        transform: translateY(100%);
+    }
+
+    .container.active .log-in {
+        transform: translateY(-100%);
     }
 }
