--- a/Users/templates/Users/password_reset_done.html
+++ b/Users/templates/Users/password_reset_done.html
@@ -6,6 +6,6 @@
     <title>Correo electrónico enviado</title>
 </head>
 <body>
-    <h1>Correo electrónico enviado/h1>
+    <h1>Correo electrónico enviado</h1>
 </body>
 </html>
