Update HTML templates with improved metadata, titles, and navigation structure for Log Inventory

--- a/Users/templates/Users/authenticate.html
+++ b/Users/templates/Users/authenticate.html
@@ -1,10 +1,16 @@
+{%load static%}
 <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../static/CSS/startUpStyles.css">
-    <title>Welcome</title>
+    <title>Comenzar Log Inventory</title>
+    <link rel="icon" href="{%static '/images/LogoMini.webp'%}" type="image/webp">
+    <meta name="description" content="Página inicio de sesión y registro Log Inventory">
+    <meta name="keywords" content="iniciar sesión Log Inventory, Log Inventory, cuenta Log Inventory">
+    <meta name="author" content="Log Inventory">
+    <meta name="robots" content="index, follow">
 </head>
 <body>
     <div class="container {{class}}">
