--- a/Users/templates/Users/main.html
+++ b/Users/templates/Users/main.html
@@ -7,7 +7,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="../../static/CSS/mainStyles.css">
-    <title>Sidebar</title>
+    <title>Work space Log Inventory</title>
+    <link rel="icon" href="{%static '/IMAGES/MiniLogoType.webp'%}" type="image/webp">
+    <meta name="description" content="Work space Log Inventory">
+    <meta name="author" content="Log Inventory">
+    <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
     <aside class="sidebar">
