--- a/Users/templates/Users/authenticate.html
+++ b/Users/templates/Users/authenticate.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../static/CSS/startUpStyles.css">
-    <title>Comenzar Log Inventory</title>
-    <link rel="icon" href="{%static '/images/LogoMini.webp'%}" type="image/webp">
+    <link rel="stylesheet" href="{%static '/CSS/authenticateStyles.css'%}">
+    <title>Comenzar</title>
+    <link rel="icon" href="{%static '/IMAGES/LogoMini.webp'%}" type="image/webp">
     <meta name="description" content="Página inicio de sesión y registro Log Inventory">
     <meta name="keywords" content="iniciar sesión Log Inventory, Log Inventory, cuenta Log Inventory">
     <meta name="author" content="Log Inventory">
@@ -35,6 +35,6 @@
             </div>
         </div>
     </div>
-    <script src="../../static/SCRIPTS/startScript.js"></script>
+    <script src="{%static '/SCRIPTS/authenticateScript.js'%}"></script>
 </body>
 </html>
