--- a/Users/static/CSS/authenticateStyles.css
+++ b/Users/static/CSS/authenticateStyles.css
@@ -14,7 +14,7 @@ body {
     width: 100dvw;
     display: grid;
     place-items: center;
-    background-image: url(../IMAGES/Troncos.jpg);
+    background-image: url(../IMAGES/Troncos.webp);
     background-size: cover;
     font-family: Montserrat;
 }
