--- a/Users/templates/Users/home.html
+++ b/Users/templates/Users/home.html
@@ -4,47 +4,105 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="{%static '/CSS/homeStyles.css'%}">
     <title>Log Inventory</title>
-    <link rel="icon" href="{%static '/images/LogoMini.webp'%}" type="image/webp">
+    <link rel="icon" href="{%static '/IMAGES/LogoMini.webp'%}" type="image/webp">
     <meta name="description" content="Home software de inventario Log Inventory">
     <meta name="keywords" content="Log Inventory, software inventario, inventario instituciones, software de inventario online, sistema de inventario para colegios, gestión de inventario">
     <meta name="author" content="Log Inventory">
     <meta name="robots" content="index, follow">
 </head>
 <body>
-    <nav>
-        <img src="{%static '/images/Logo.webp'%}" alt="Log Inventory" class="logo">
-        <ul class="nav-bar">
-            <li class="navbar__item">Home</li>
-            <li class="navbar__item">About</li>
-            <li class="navbar__item">Services</li>
-            <li class="navbar__item">Contact</li>
-            <li class="navbar__item">Login</li>
-        </ul>
-    </nav>
-    <main>
+    <header>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary p-0">
+            <div class="container-fluid p-0">
+                <div class="navbar-brand">
+                    <img src="{%static '/IMAGES/LogoPequeño.webp'%}" alt="Logo" class="navbar-brand__logo">
+                </div>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Sobre Nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Servicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contacto</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Iniciar Sesión</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
         <section class="hero">
             <h1 class="hero__title">¡Gestiona tu inventario!</h1>
-            <p class="hero__description"></p>
-            <button class="hero__button">Get Started</button>
+            <p class="hero__description">Log Inventory es un software de inventario online gratuito, desarrollado con un enfoque accesible para instituciones educativas, ¡únetenos y disfruta de nuestras herramientas!</p>
+            <button class="hero__button">Registrarse</button>
         </section>
+    </header>
+    <main>
         <section class="about">
             <h2 class="about__title">Sobre nosotros</h2>
-            <p class="about__description">Log Inventory es un software de inventario para instituciones educativas, que permite llevar un control de los activos de la institución, así como también de los préstamos de los mismos.</p>
+            <p class="about__description">
+                El equipo de Log Inventory está conformado por estudiantes de <a href="https://iegabo.edu.co/" target="_blank">La I.E Gabo</a>, hemos desarrollado este proyecto por iniciativa propia con el objetivo de facilitar la gestión de inventarios en instituciones educativas sin la posibilidad de acceder a un software de esta clase, nuestro software es gratuito y de código abierto.
+                A pesar de nuestra inexperiencia, hemos dado lo mejor de nosotros a Log Inventory, esperamos ayudar a muchas personas e instituciones. Si desean aportar de alguna manera al proyecto por favor <a href="#">contáctenos</a>, por otro lado esperamos que Log Inventory sea fuente de inspiración para los que incursionen en el mundo de la programación y los que desean cambiar la realidad de su comunidad.
+            </p>
         </section>
         <section class="services">
             <h2 class="services__title">¿Qué herramientas ofrecemos?</h2>
             <ul class="services__list">
-                <li class="services__item">Control de activos</li>
-                <li class="services__item">Préstamos de activos</li>
-                <li class="services__item">Reportes de activos</li>
+                <li class="services__item">
+                    <h3>Control de activos</h3>
+                    <p>Una vez hayas iniciado sesión podrás gestionar el stock de tus activos, crear objetos y grupos en los que clasificarlos, además de definir el encargado de cada objeto y grupo.</p>
+                </li>
+                <li class="services__item">
+                    <h3>Gestión de Usuarios</h3>
+                    <p>Además de la cuenta principal, tendrás la posibilidad de crear usuarios que puedan observar los recursos de la institución y ser encargados de objetos, aunque obviamente tendrán restricciones para modificar el stock y otras funcones.</p>
+                </li>
+                <li class="services__item">
+                    <h3>Préstamos de activos</h3>
+                    <p>Cuando se desee hacer un prestamo de algún objeto, se podrá crear un registro de este con sus características e involucrados.</p>
+                </li>
+                <li class="services__item">
+                    <h3>Reportes de activos</h3>
+                    <p>En cualquier momento puedes descargar un reporte con todos los movimientos de estock y prestamos, los cuales también pueden ser consultados sin descargarse en sus respectivas secciones de historial y prestamos. </p>
+                </li>
             </ul>
         </section>
         <section class="contact">
             <h2 class="contact__title">Contacto</h2>
-            
+            <div class="contact__info">
+                <p>Correo Electrónico: <a href="mailto:log.inventory2406@gmail.com">log.inventory2406@gmail.com</a></p>
+                <p>Teléfono: +57 3128107264</p>
+            </div>
         </section>
     </main>
-    <footer></footer>
+    <footer class="text-center text-lg-start">
+        <div class="container d-flex justify-content-center py-5">
+            <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #000;">
+                <i class="bi bi-facebook"></i>
+            </button>
+            <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #000;">
+                <i class="bi bi-instagram"></i>
+            </button>
+        </div>
+    
+        <!-- Copyright -->
+        <div class="text-center text-white p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+            © 2024 Copyright: Log Inventory
+        </div>
+        <!-- Copyright -->
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
