--- a/Users/templates/Users/home.html
+++ b/Users/templates/Users/home.html
@@ -1,7 +1,7 @@
 {%load static%}
 <!DOCTYPE html>
 <html lang="es">
-<head>
+<head> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -15,30 +15,30 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary p-0">
+        <nav class="navbar navbar-expand-lg">
             <div class="container-fluid p-0">
                 <div class="navbar-brand">
-                    <img src="{%static '/IMAGES/LogoPequeño.webp'%}" alt="Logo" class="navbar-brand__logo">
+                    <img src="{%static '/IMAGES/Logo.webp'%}" alt="Logo" class="navbar-brand__logo">
                 </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
+                <div class="collapse navbar-collapse navbar__nav" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                            <a class="nav-link active text-white" aria-current="page" href="#">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Sobre Nosotros</a>
+                            <a class="nav-link text-white" href="#">Sobre Nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Servicio</a>
+                            <a class="nav-link text-white" href="#">Servicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contacto</a>
+                            <a class="nav-link text-white" href="#">Contacto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Iniciar Sesión</a>
+                            <a class="nav-link text-white" href="#">Iniciar Sesión</a>
                         </li>
                     </ul>
                 </div>
@@ -47,7 +47,7 @@
         <section class="hero">
             <h1 class="hero__title">¡Gestiona tu inventario!</h1>
             <p class="hero__description">Log Inventory es un software de inventario online gratuito, desarrollado con un enfoque accesible para instituciones educativas, ¡únetenos y disfruta de nuestras herramientas!</p>
-            <button class="hero__button">Registrarse</button>
+            <button class="hero__button"><span></span>Registrarse</button>
         </section>
     </header>
     <main>
