--- a/Users/templates/Users/change_password.html
+++ b/Users/templates/Users/change_password.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recuperar contraseña</title>
+    <title>Cambiar Contraseña</title>
 </head>
 <body>
     <form method="POST">
         {% csrf_token %}
         {{form}}
-        <button type="submit">Recuperar contraseña</button>
-        <a href="{% url 'authenticate' type='deactivate' %}">Seguir INICIANDO SESIÓN</a>
+        <input type="submit" value="Cambiar Contraseña">
     </form>
 </body>
 </html>
