--- a/Users/templates/Users/password_reset_complete.html
+++ b/Users/templates/Users/password_reset_complete.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Contraseña cambiada con éxito</h1>
-    <a href="{% url 'authenticate' %}">Iniciar sesión</a>
+    <a href="{% url 'authenticate' deactivate %}">Iniciar sesión</a>
 </body>
 </html>
