--- a/Users/static/CSS/homeStyles.css
+++ b/Users/static/CSS/homeStyles.css
@@ -32,14 +32,13 @@ header {
 }
 
 nav {
-    position: absolute;
     z-index: 100;
 }
 
 .navbar-brand {
     width: 15dvw;
-    filter: drop-shadow(5px 4px 2px var(--sidebar-color));
     margin-right: calc(100dvw - 15dvw - 640px);
+    margin-left: 5px;
 }
 
 .navbar-brand__logo {
@@ -124,7 +123,12 @@ h1 {
     outline: none;
 }
 
-span {
+.hero__button a {
+    color: inherit;
+    text-decoration: none;
+}
+
+.hero__button span {
     background-color: #009688;
     height: 100%;
     width: 0;
@@ -142,4 +146,47 @@ span {
 
 main {
     width: 100%;
+}
+
+main section {
+    margin: 50px 0;
+    padding: 0 50px;
+}
+
+main section p {
+    text-align: justify;
+
+}
+
+main section h2 {
+    margin-bottom: 15px;
+    font-size: 2.5rem;
+}
+
+.services__list {
+    list-style: none;
+
+}
+
+.services__item {
+    margin-top: 20px;
+}
+
+h3 {
+    font-size: 1.5rem;
+}
+
+footer {
+    background-color: var(--fb-color);
+}
+
+
+@media  (max-width: 768px) {
+    .nav-item::after {
+        display: none;
+    }
+    
+    .navbar-toggler-icon {
+        background-color: #fff;
+    }
 }
