--- a/Users/templates/Users/home.html
+++ b/Users/templates/Users/home.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="{%static '/CSS/homeStyles.css'%}">
     <title>Log Inventory</title>
     <link rel="icon" href="{%static '/IMAGES/LogoMini.webp'%}" type="image/webp">
@@ -18,7 +19,7 @@
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid p-0">
                 <div class="navbar-brand">
-                    <img src="{%static '/IMAGES/Logo.webp'%}" alt="Logo" class="navbar-brand__logo">
+                    <img src="{%static '/IMAGES/logo_transparente_blanco.webp'%}" alt="Logo" class="navbar-brand__logo">
                 </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -89,10 +90,10 @@
     </main>
     <footer class="text-center text-lg-start">
         <div class="container d-flex justify-content-center py-5">
-            <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #000;">
+            <button type="button" class="btn btn-primary btn-lg btn-floating mx-2">
                 <i class="bi bi-facebook"></i>
             </button>
-            <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #000;">
+            <button type="button" class="btn btn-primary btn-lg btn-floating mx-2">
                 <i class="bi bi-instagram"></i>
             </button>
         </div>
