--- a/Users/templates/Users/main.html
+++ b/Users/templates/Users/main.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="{%static '/CSS/mainStyles.css'%}">
-    <title>Work space Log Inventory</title>
+    <title>Work space</title>
     <link rel="icon" href="{%static '/IMAGES/MiniLogoType.webp'%}" type="image/webp">
     <meta name="description" content="Work space Log Inventory">
     <meta name="author" content="Log Inventory">
@@ -82,7 +82,7 @@
                     <input value="search" type="submit" class="material-symbols-outlined">
                 </div>
                 <div class="filter-bar__logo-container col-5">
-                    <img src="{%static '/IMAGES/logo.webp'%}" alt="logo" class="logo">
+                    <img src="{%static '/IMAGES/logo_transparente_blanco.webp'%}" alt="logo" class="logo">
                 </div>
             </div>
         </div>
