--- a/Users/templates/Users/home.html
+++ b/Users/templates/Users/home.html
@@ -27,9 +27,9 @@
                 <div class="collapse navbar-collapse navbar__nav" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active text-white" aria-current="page" href="{% url 'authenticate' type='activate' %}">Inicio</a>
+                            <a class="nav-link active text-white" aria-current="page" href="#">Inicio</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item"> 
                             <a class="nav-link text-white" href="#">Sobre Nosotros</a>
                         </li>
                         <li class="nav-item">
