add funtion to create subusers

--- a/Users/templates/Users/main.html
+++ b/Users/templates/Users/main.html
@@ -47,7 +47,7 @@
                     </a>
                 </li>
                 <li class="sidebar__item">
-                    <a href="#" class="sidebar__item-link">
+                    <a href="{% url 'manage_subusers' %}" class="sidebar__item-link">
                         <span class="material-symbols-outlined">groups</span>
                         <p>Usuarios</p>
                     </a>
