Refactor profile page layout and styles; enhance filter bar design and responsiveness

--- a/Users/static/CSS/mainStyles.css
+++ b/Users/static/CSS/mainStyles.css
@@ -303,6 +303,7 @@ aside:has(input[type="checkbox"]:checked) ~ main {
     display: flex;
     justify-content: end;
     align-items: center;
+    padding-right: .75rem;
 }
 
 .logo {
