Add password reset functionality and improve error page metadata; update profile page description and keywords

--- a/Users/static/CSS/mainStyles.css
+++ b/Users/static/CSS/mainStyles.css
@@ -116,6 +116,9 @@ body {
     text-decoration: none;
 }
 
+.profile-option {
+    text-transform: none;
+}
 
 .sidebar__profile img {
     border-radius: 50%;
