--- a/Users/templates/Users/password_reset_confirm.html
+++ b/Users/templates/Users/password_reset_confirm.html
@@ -1,9 +1,14 @@
+{%load static%}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cambiar contraseña</title>
+    <link rel="icon" href="{%static '/IMAGES/LogoMini.webp'%}" type="image/webp">
+    <meta name="description" content="Cambio contraseña recuperación cuenta Log Inventory">
+    <meta name="author" content="Log Inventory">
+    <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
     <form method="POST">
