--- a/Users/templates/Users/profile.html
+++ b/Users/templates/Users/profile.html
@@ -8,10 +8,9 @@
     <link rel="stylesheet" href="{%static '/CSS/profileStyles.css'%}">
     <title>Perfil</title>
     <link rel="icon" href="{%static '/IMAGES/LogoMini.webp'%}" type="image/webp">
-    <meta name="description" content="Home software de inventario Log Inventory">
-    <meta name="keywords" content="Log Inventory, software inventario, inventario instituciones, software de inventario online, sistema de inventario para colegios, gestión de inventario">
+    <meta name="description" content="Configuración usuario Log Inventory">
     <meta name="author" content="Log Inventory">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
     <aside class="sidebar">
