--- a/Users/templates/Users/error_403.html
+++ b/Users/templates/Users/error_403.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="{%static '/CSS/error403Styles.css'%}">
     <title>Error 403</title>
     <link rel="icon" href="{%static '/IMAGES/LogoMini.webp'%}" type="image/webp">
-    <meta name="description" content="Error 403">
-    <meta name="author" content="LOG INVENTORY">
+    <meta name="description" content="Error 403 Log Inventory">
+    <meta name="author" content="Log Inventory">
     <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
