--- a/Users/templates/Users/password_reset.html
+++ b/Users/templates/Users/password_reset.html
@@ -1,16 +1,37 @@
+{%load static%}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recuperar contraseña</title>
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+    <link rel="stylesheet" href="{%static '/CSS/passwordResetStyles.css'%}">
+    <title>Comprobación Identidad</title>
+    <link rel="icon" href="{%static '/IMAGES/LogoMini.webp'%}" type="image/webp">
+    <meta name="description" content="Recuperación contraseña Log Inventory">
+    <meta name="keywords" content="Recuperar cuenta Log Inventory, Log Inventory, cuenta Log Inventory">
+    <meta name="author" content="Log Inventory">
+    <meta name="robots" content="index, follow">
 </head>
 <body>
-    <form method="POST">
-        {% csrf_token %}
-        {{form}}
-        <button type="submit">Recuperar contraseña</button>
-        <a href="{% url 'authenticate' type='deactivate' %}">Seguir INICIANDO SESIÓN</a>
-    </form>
-</body>
+    <main>
+        <div class="info">
+            <h1>Recuperar contraseña <span class="material-symbols-outlined">Lock_reset</span></h1>
+            <ul>
+                <li>
+                    <p>Ingresa el correo electónico relacionado a tu cuenta y presiona en el botón de recuperar contraseña.</p>
+                </li>
+                <li>
+                    <p>Recibirás un correo con un enlace para restablecer tu contraseña.</p>
+                </li>
+            </ul>
+        </div>
+        <form method="POST">
+            {% csrf_token %}
+            {{form}} 
+            <button type="submit">Recuperar contraseña</button>
+            <a href="{% url 'authenticate' type='deactivate' %}">Seguir iniciando sesión</a>
+        </form>
+    </main>
+</body> 
 </html>
