--- a/Users/templates/Users/password_reset_complete.html
+++ b/Users/templates/Users/password_reset_complete.html
@@ -1,12 +1,17 @@
+{%load static%}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contraseña cambiada</title>
+    <link rel="icon" href="{%static '/IMAGES/LogoMini.webp'%}" type="image/webp">
+    <meta name="description" content="Confirmación contraseña cambiada Log Inventory">
+    <meta name="author" content="Log Inventory">
+    <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
     <h1>Contraseña cambiada con éxito</h1>
-    <a href="{% url 'authenticate' deactivate %}">Iniciar sesión</a>
+    <a href="{% url 'authenticate' type='deactivate' %}">Iniciar sesión</a>
 </body>
 </html>
