--- a/Users/templates/Users/password_reset_done.html
+++ b/Users/templates/Users/password_reset_done.html
@@ -1,11 +1,16 @@
+{%load static%}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Correo electrónico enviado</title>
+    <title>Correo enviado</title>
+    <link rel="icon" href="{%static '/IMAGES/LogoMini.webp'%}" type="image/webp">
+    <meta name="description" content="Envio correo recuperación contraseña Log Inventory">
+    <meta name="author" content="Log Inventory">
+    <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
-    <h1>Correo electrónico enviado</h1>
+    <h1>¡Correo electrónico enviado con éxito!</h1>
 </body>
 </html>
