Add functionality for managing subprofiles and subprofile groups; update forms, models, and templates

--- a/Users/templates/Users/profile.html
+++ b/Users/templates/Users/profile.html
@@ -95,6 +95,7 @@
                             cambiar contraseña(cambiar a imagen)
                         </a>
                     </button>
+                    <input type="checkbox" value="Actualizar">
                 </div>
             </form>
         </div>
