--- a/Users/templates/Users/subusers.html
+++ b/Users/templates/Users/subusers.html
@@ -1,8 +1,10 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static '/CSS/subusersStyles.css'%}">
     <title>Manejo de Usuarios</title>
 </head>
 <body>
@@ -10,6 +12,12 @@
         {% csrf_token %}
         {{form}}
         <input type="submit" value="Crear Usuario">
+    </form>
+    <form class="create_group" method="POST">
+        <input type="checkbox" class="create_subgroup_checkbox" {{created_subgroup}}>
+        {% csrf_token %}
+        {{form_group}}
+        <input type="submit" value="Crear Usuario"> 
     </form>
 </body>
 </html>
