Add email validation to password reset form; improve error page layout and styles

--- a/Users/templates/Users/password_reset_confirm.html
+++ b/Users/templates/Users/password_reset_confirm.html
@@ -4,6 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% if  form == None %}
+        <link rel="stylesheet" href="{%static '/CSS/error400Styles.css'%}">
+    {%else%}
+        <link rel="stylesheet" href="{%static '/CSS/passwordResetStyles.css'%}">
+    {%endif%}
+    
     <title>Cambiar contraseña</title>
     <link rel="icon" href="{%static '/IMAGES/LogoMini.webp'%}" type="image/webp">
     <meta name="description" content="Cambio contraseña recuperación cuenta Log Inventory">
@@ -11,10 +17,14 @@
     <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
-    <form method="POST">
-        {% csrf_token %}
-        {{form}}
-        <button type="submit">Cambiar contraseña</button>
-    </form>
+    {% if  form == None %}
+        {% include 'Users/error_400.html' %}
+    {%else%}
+        <form method="POST">
+            {% csrf_token %}
+            {{form}}
+            <button type="submit">Cambiar contraseña</button>
+        </form>
+    {%endif%}
 </body>
 </html>
