--- a/Users/templates/Users/error_400.html
+++ b/Users/templates/Users/error_400.html
@@ -1,27 +1,13 @@
 {%load static%}
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{%static '/CSS/error400Styles.css'%}">
-    <title>Error 403</title>
-    <link rel="icon" href="{%static '/IMAGES/LogoMini.webp'%}" type="image/webp">
-    <meta name="description" content="Error 400 Log Inventory">
-    <meta name="author" content="Log Inventory">
-    <meta name="robots" content="noindex, nofollow">
-</head>
-<body>
-    <div class="error">
-        <h1>
-            Error 400
-        </h1>
-        <div class="typewritter">
-            <p>La URL no corresponde a ningún link creado o ya ha pasado el tiempo estimado.</p>
-        </div>
+<div class="error">
+    <h1>
+        Error 400
+    </h1>
+    <div class="typewritter">
+        <p>La URL no corresponde a ningún link creado o ya ha pasado el tiempo estimado.</p>
+        <a href="{% url 'home' %}">Iniciar sesión</a>
     </div>
-    <div class="image__container">
-        <img src="{%static '/IMAGES/totoro-walking.webp'%}" alt="Totoro walking">
-    </div>
-</body>
-</html>
+</div>
+<div class="image__container">
+    <img src="{%static '/IMAGES/totoro-walking.webp'%}" alt="Totoro walking">
+</div>
