Refactor password reset and profile templates; enhance styles and improve user instructions

--- a/Users/templates/Users/password_reset.html
+++ b/Users/templates/Users/password_reset.html
@@ -19,14 +19,14 @@
             <h1>Recuperar contraseña <span class="material-symbols-outlined">Lock_reset</span></h1>
             <ul>
                 <li>
-                    <p>Ingresa el correo electónico relacionado a tu cuenta y presiona en el botón de recuperar contraseña.</p>
+                    <p>Ingresa el correo electónico relacionado a tu cuenta y presiona el botón de recuperar contraseña.</p>
                 </li>
                 <li>
                     <p>Recibirás un correo con un enlace para restablecer tu contraseña.</p>
                 </li>
             </ul>
         </div>
-        <form method="POST">
+        <form method="POST"> 
             {% csrf_token %}
             {{form}} 
             <button type="submit">Recuperar contraseña</button>
