--- a/Users/templates/Users/password_reset_confirm.html
+++ b/Users/templates/Users/password_reset_confirm.html
@@ -17,14 +17,27 @@
     <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
-    {% if  form == None %}
-        {% include 'Users/error_400.html' %}
+    {% if  form == None %} 
+        {% include 'Users/error_400.html' %} 
     {%else%}
-        <form method="POST">
-            {% csrf_token %}
-            {{form}}
-            <button type="submit">Cambiar contraseña</button>
-        </form>
+        <main>
+            <div class="info">
+                <h1>¡Casi listo!</h1>
+                <ul>
+                    <li>
+                        <p>Escribe tu contraseña nueva, no olvides guardarla.</p>
+                    </li>
+                    <li>
+                        <p>Presiona el botón de cambiar contraseña y posteriormente dirigete a iniciar sesión.</p>
+                    </li>
+                </ul>
+            </div>
+            <form method="POST">
+                {% csrf_token %}
+                {{form}}
+                <button type="submit">Cambiar contraseña</button>
+            </form>
+        </main>
     {%endif%}
 </body>
 </html>
