--- a/Users/static/CSS/passwordResetStyles.css
+++ b/Users/static/CSS/passwordResetStyles.css
@@ -10,7 +10,7 @@ body {
     --dark-color: #222;
     --fb-color: #003366;
     --wood: #8B5E3C;
-    height: 100dvh;
+    height: 100dvh; 
     width: 100dvw;
     display: grid;
     place-items: center;
@@ -55,11 +55,15 @@ h1 {
     position: relative;
     top: .5rem
 }
-
+ 
 ul {
     display: flex;
     flex-direction: column;
     gap: 13px;
+}
+
+li p {
+    text-align: justify;
 }
 
 form {
@@ -73,7 +77,7 @@ form {
     height: 100%;
 }
 
-form > button[type="submit"] {
+form > button[type="submit"], input[type="submit"] {
     background-color: var(--fb-color);
     color: #fff;
     padding: 10px 45px;
@@ -84,14 +88,11 @@ form > button[type="submit"] {
     text-transform: uppercase;
     margin-top: 10px;
     cursor: pointer;
-}
-
-form > button[type="submit"] {
     transition: box-shadow .3s;
     outline: none;
 }
 
-form > button[type="submit"]:hover {
+form > button[type="submit"]:hover, input[type="submit"]:hover {
     box-shadow: 7px 7px 0px rgb(100, 166, 231),
                 -7px -7px 0px #335a94;
 }
@@ -125,6 +126,15 @@ form a:hover {
 
 form > div, form > button {
     width: 100%;
+}
+
+.errorlist {
+    list-style: none;
+}
+
+.errorlist li {
+    color: #e24;
+    font-size: .9rem;
 }
 
 @media (max-width: 768px) {
