--- a/Users/static/CSS/profileStyles.css
+++ b/Users/static/CSS/profileStyles.css
@@ -282,8 +282,7 @@ aside:has(input[type="checkbox"]:checked) ~ main {
     height: 100%;
     object-fit: cover;
     border-radius: 20px 0 0 20px;
-    border: var(--sidebar-color) 5px solid;
-    border-right: none;
+    border: var(--fb-color) 5px solid;
 }
 
 .profile-container form {
