--- a/Users/templates/Users/change_password.html
+++ b/Users/templates/Users/change_password.html
@@ -1,15 +1,29 @@
+{%load static%}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cambiar Contraseña</title>
 </head>
 <body>
-    <form method="POST">
-        {% csrf_token %}
-        {{form}}
-        <input type="submit" value="Cambiar Contraseña">
-    </form>
+    <main>
+        <div class="info">
+            <h1>¡Casi listo!</h1>
+            <ul>
+                <li>
+                    <p>Escribe tu contraseña nueva, no olvides guardarla.</p>
+                </li>
+                <li>
+                    <p>Presiona el botón de cambiar contraseña y luego inicia sesión.</p>
+                </li>
+            </ul>
+        </div>
+        <form method="POST">
+            {% csrf_token %}
+            {{form}}
+            <input type="submit" value="Cambiar Contraseña">
+        </form> 
+    </main>
 </body>
 </html>
